fixed PUBMAN-1459 search extension to successor - predecessor
Former-commit-id: 39c754ccd05d1f919ec06defd870ba6ed9e40d5c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -465,13 +465,13 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
-ENUM_IMPORT_FORMAT_ZFN = ZfN
-
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
 ENUM_IMPORT_FORMAT_WOS = WOS
+
+ENUM_IMPORT_FORMAT_ZFN = ZfN
 
 ENUM_INVITATIONSTATUS_INVITED = Eingeladen
 
@@ -645,12 +645,6 @@ EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = Dieser Datensatz ist Teil der
 
-EditItem_lblItemVersionID = (new) ID des Datensatzes: 
-
-EditItem_lblItemDepositor = (new) Dieser Datensatz wurde eingestellt von
-
-EditItem_lblItemLastModifier = (new) Dieser Datensatz wurde zuletzt ge\u00E4ndert von
-
 EditItem_lblContent = Inhalt
 
 EditItem_lblContentRelation = Relation
@@ -704,6 +698,12 @@ EditItem_lblFileURL = Datei URL
 EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Heftnummer
+
+EditItem_lblItemDepositor = (new) Dieser Datensatz wurde eingestellt von
+
+EditItem_lblItemLastModifier = (new) Dieser Datensatz wurde zuletzt ge\u00E4ndert von
+
+EditItem_lblItemVersionID = (new) ID des Datensatzes: 
 
 EditItem_lblLicencingInfo = Lizenz
 
@@ -1017,6 +1017,8 @@ SearchResultList_lblItems = Datens\u00E4tze
 
 SearchResultList_lblNoHits = 0 Treffer
 
+SearchResultList_lblRestServiceExamplePage = (new) in REST-Interface \u00FCbernehmen
+
 #
 # SearchResultList
 #
@@ -1031,8 +1033,6 @@ SearchResultList_lblSortedBy = sortiert nach
 Search_lblShowHide = einblenden/ausblenden
 
 ShowQuery = Zeige Suchabfrage
-
-SearchResultList_lblRestServiceExamplePage = (new) in REST-Interface \u00FCbernehmen
 
 #
 # Submission
@@ -1071,6 +1071,45 @@ SubmitItem_lnkCancel = Abbrechen
 SubmitItem_lnkRelease = Freigabe fertigstellen
 
 SubmitItem_lnkSubmit = Einstellen
+
+#
+# Tools
+#
+ToolsPage = (new) Tools
+
+Tools_lblCoNE = (new) CoNE
+
+Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = (new) Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblREST = (new) REST
+
+Tools_lblRESTHead = (new) Suchen und Exportieren (REST-Schnittstelle)
+
+Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+
+Tools_lblSWORD = (new) SWORD
+
+Tools_lblSWORDHead = (new) SWORD-Schnittstelle
+
+Tools_lblSWORDText = (new) Nutzen Sie diesen Push-Dienst zum automatisierten Datenimport von externen Servern. 
+
+Tools_lblTools = (new) Tools
+
+Tools_lblUnAPI = (new) unAPI
+
+Tools_lblUnAPIHead = (new) Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
+
+Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
+
+Tools_lblValidationService = (new) Validierungsservice
+
+Tools_lblValidationServiceHead = (new) Validierungsservice
+
+Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
 
 ViewItemFull_btnFileSection = Dateien
 
@@ -1271,45 +1310,6 @@ ViewItemFull_lblSubHeaderDetails = Details
 ViewItemFull_lblSubHeaderEvent = Veranstaltung
 
 ViewItemFull_lblSubHeaderFile = Dateien
-
-#
-# Tools
-#
-ToolsPage = (new) Tools
-
-Tools_lblTools = (new) Tools
-
-Tools_lblCoNE = (new) CoNE
-
-Tools_lblREST = (new) REST
-
-Tools_lblUnAPI = (new) unAPI
-
-Tools_lblValidationService = (new) Validierungsservice
-
-Tools_lblSWORD = (new) SWORD
-
-Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
-
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
-
-Tools_lblCoNEText = (new) Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
-
-Tools_lblRESTHead = (new) Suchen und Exportieren (REST-Schnittstelle)
-
-Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
-
-Tools_lblUnAPIHead = (new) Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
-
-Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
-
-Tools_lblValidationServiceHead = (new) Validierungsservice
-
-Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
-
-Tools_lblSWORDHead = (new) SWORD\u002DSchnittstelle
-
-Tools_lblSWORDText = (new) Nutzen Sie diesen Push\u002DDienst zum automatisierten Datenimport von externen Servern. 
 
 #
 # ViewItem Full
@@ -1974,6 +1974,8 @@ adv_search_lblChkType_submitted = eingestellt
 #Date
 adv_search_lblFrom = Von
 
+adv_search_lblInclHistory = Vorg\u00E4nger- und Nachfolger - Institutionen ber\u00FCcksichtigen
+
 adv_search_lblLanguage = Sprache der Publikation
 
 #language
@@ -2474,13 +2476,13 @@ mainMenu_lblBrowse = Browse
 
 mainMenu_lblCart = ABLAGE
 
-mainMenu_lblTools = (new) Tools
-
 mainMenu_lblMyWorkspace = Deposit
 
 mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
 mainMenu_lblSubmission = EINGABE
+
+mainMenu_lblTools = (new) Tools
 
 mainMenu_lnkBlog = Blog
 
