--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -444,13 +444,13 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
+ENUM_IMPORT_FORMAT_ZFN = ZfN
+
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
 ENUM_IMPORT_FORMAT_WOS = WOS
-
-ENUM_IMPORT_FORMAT_ZFN = ZfN
 
 ENUM_INVITATIONSTATUS_INVITED = Invitado
 
@@ -636,6 +636,12 @@ EditItem_lblCollection = Colecci\u00F3n
 
 EditItem_lblCollectionOfItem = Este item es parte de
 
+EditItem_lblItemVersionID = (new) ID of the item: 
+
+EditItem_lblItemDepositor = (new) This item was created by
+
+EditItem_lblItemLastModifier = (new) This item was last modfied by
+
 EditItem_lblContent = Contenido
 
 EditItem_lblContentRelation = Relaci\u00F3n
@@ -689,12 +695,6 @@ EditItem_lblFileURL = Archivo URL
 EditItem_lblGenre = G\u00E9nero
 
 EditItem_lblIssue = N\u00FAmero
-
-EditItem_lblItemDepositor = (new) This item was created by
-
-EditItem_lblItemLastModifier = (new) This item was last modfied by
-
-EditItem_lblItemVersionID = (new) ID of the item: 
 
 EditItem_lblLicencingInfo = Licencia
 
@@ -1005,8 +1005,6 @@ SearchResultList_lblItems = Items
 
 SearchResultList_lblNoHits = 0 Resultados
 
-SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface 
-
 #
 # SearchResultList
 #
@@ -1021,6 +1019,8 @@ SearchResultList_lblSortedBy = por
 Search_lblShowHide = mostrar/ocultar
 
 ShowQuery = (new) Mostrar consulta de b\u00FAsqueda
+
+SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface 
 
 #
 # Submission
@@ -1059,45 +1059,6 @@ SubmitItem_lnkCancel = Cancelar
 SubmitItem_lnkRelease = Finalizar Publicaci\u00F3n
 
 SubmitItem_lnkSubmit = Enviar
-
-#
-# Tools
-#
-ToolsPage = (new) Tools
-
-Tools_lblCoNE = (new) CoNE
-
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
-
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
-
-Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
-
-Tools_lblREST = (new) REST
-
-Tools_lblRESTHead = (new) Search and Export (REST-Interface)
-
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
-
-Tools_lblSWORD = (new) SWORD
-
-Tools_lblSWORDHead = (new) SWORD-Interface
-
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
-
-Tools_lblTools = (new) Tools
-
-Tools_lblUnAPI = (new) unAPI
-
-Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
-
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
-
-Tools_lblValidationService = (new) Validation service
-
-Tools_lblValidationServiceHead = (new) Validation service
-
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
 
 ViewItemFull_btnFileSection = Ficheros
 
@@ -1300,6 +1261,45 @@ ViewItemFull_lblSubHeaderDetails = Detalles
 ViewItemFull_lblSubHeaderEvent = Evento
 
 ViewItemFull_lblSubHeaderFile = Ficheros
+
+#
+# Tools
+#
+ToolsPage = (new) Tools
+
+Tools_lblTools = (new) Tools
+
+Tools_lblCoNE = (new) CoNE
+
+Tools_lblREST = (new) REST
+
+Tools_lblUnAPI = (new) unAPI
+
+Tools_lblValidationService = (new) Validation service
+
+Tools_lblSWORD = (new) SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+
+Tools_lblRESTHead = (new) Search and Export (REST-Interface)
+
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+
+Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
+
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+
+Tools_lblValidationServiceHead = (new) Validation service
+
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
+
+Tools_lblSWORDHead = (new) SWORD\u002DInterface
+
+Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
 
 #
 # ViewItem Full
@@ -2389,13 +2389,13 @@ mainMenu_lblBrowse = Hojear
 
 mainMenu_lblCart = CESTA
 
+mainMenu_lblTools = (new) Instrumentos
+
 mainMenu_lblMyWorkspace = Depositar
 
 mainMenu_lblQA = Garant\u00EDa de calidad
 
 mainMenu_lblSubmission = ENV\u00CDO
-
-mainMenu_lblTools = (new) Instrumentos
 
 mainMenu_lnkBlog = Blog
 
