--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -446,13 +446,13 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
+ENUM_IMPORT_FORMAT_ZFN = ZfN
+
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
 ENUM_IMPORT_FORMAT_WOS = WOS
-
-ENUM_IMPORT_FORMAT_ZFN = ZfN
 
 ENUM_INVITATIONSTATUS_INVITED = \u62DB\u5F85\u8B1B\u6F14
 
@@ -626,6 +626,12 @@ EditItem_lblCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 EditItem_lblCollectionOfItem = \u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D: 
 
+EditItem_lblItemVersionID = (new) ID of the item: 
+
+EditItem_lblItemDepositor = (new) This item was created by
+
+EditItem_lblItemLastModifier = (new) This item was last modfied by
+
 EditItem_lblContent = \u5185\u5BB9\u8AAC\u660E
 
 EditItem_lblContentRelation = \u95A2\u9023\u6027(Relation)
@@ -679,12 +685,6 @@ EditItem_lblFileURL = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306EURL
 EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
-
-EditItem_lblItemDepositor = (new) This item was created by
-
-EditItem_lblItemLastModifier = (new) This item was last modfied by
-
-EditItem_lblItemVersionID = (new) ID of the item: 
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
 
@@ -994,8 +994,6 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
-
 #
 # SearchResultList
 #
@@ -1010,6 +1008,8 @@ SearchResultList_lblSortedBy = \u30BD\u30FC\u30C8\u6761\u4EF6:
 Search_lblShowHide = \u8868\u793A\u30FB\u7701\u7565
 
 ShowQuery = \u691C\u7D22\u6761\u4EF6\u3092\u8868\u793A\u3059\u308B
+
+SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
 
 #
 # Submission
@@ -1048,45 +1048,6 @@ SubmitItem_lnkCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 SubmitItem_lnkRelease = \u516C\u958B\u3059\u308B
 
 SubmitItem_lnkSubmit = \u767B\u9332
-
-#
-# Tools
-#
-ToolsPage = (new) Tools
-
-Tools_lblCoNE = (new) CoNE
-
-Tools_lblCoNEHead = (new) \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
-
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
-
-Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
-
-Tools_lblREST = (new) REST
-
-Tools_lblRESTHead = (new) \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
-
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
-
-Tools_lblSWORD = (new) SWORD
-
-Tools_lblSWORDHead = (new) SWORD-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
-
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
-
-Tools_lblTools = (new) \u30C4\u30FC\u30EB
-
-Tools_lblUnAPI = (new) unAPI
-
-Tools_lblUnAPIHead = (new) \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
-
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
-
-Tools_lblValidationService = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
-
-Tools_lblValidationServiceHead = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
-
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
 
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
@@ -1328,6 +1289,45 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
 ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
+
+#
+# Tools
+#
+ToolsPage = (new) Tools
+
+Tools_lblTools = (new) \u30C4\u30FC\u30EB
+
+Tools_lblCoNE = (new) CoNE
+
+Tools_lblREST = (new) REST
+
+Tools_lblUnAPI = (new) unAPI
+
+Tools_lblValidationService = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+
+Tools_lblSWORD = (new) SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = (new) \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
+
+Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+
+Tools_lblRESTHead = (new) \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+
+Tools_lblUnAPIHead = (new) \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+
+Tools_lblValidationServiceHead = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
+
+Tools_lblSWORDHead = (new) SWORD\u002D\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
+
+Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
 
 #
 #ViewItemLog
@@ -2438,13 +2438,13 @@ mainMenu_lblBrowse = \u30D6\u30E9\u30A6\u30BA
 
 mainMenu_lblCart = \u4E00\u6642\u4FDD\u5B58
 
+mainMenu_lblTools = (new) \u30C4\u30FC\u30EB
+
 mainMenu_lblMyWorkspace = \u767B\u9332\u8005\u7528
 
 mainMenu_lblQA = \u7BA1\u7406\u8005\u7528
 
 mainMenu_lblSubmission = \u65B0\u898F\u767B\u9332
-
-mainMenu_lblTools = (new) \u30C4\u30FC\u30EB
 
 mainMenu_lnkBlog = \u30D6\u30ED\u30B0
 
