--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -465,13 +465,13 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
+ENUM_IMPORT_FORMAT_ZFN = ZfN
+
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
 ENUM_IMPORT_FORMAT_WOS = WOS
-
-ENUM_IMPORT_FORMAT_ZFN = ZfN
 
 ENUM_INVITATIONSTATUS_INVITED = Invited
 
@@ -645,6 +645,12 @@ EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = This item is part of the
 
+EditItem_lblItemVersionID = (new) ID of the item: 
+
+EditItem_lblItemDepositor = (new) This item was created by
+
+EditItem_lblItemLastModifier = (new) This item was last modfied by
+
 EditItem_lblContent = Content
 
 EditItem_lblContentRelation = Relation
@@ -698,12 +704,6 @@ EditItem_lblFileURL = File URL
 EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Issue
-
-EditItem_lblItemDepositor = (new) This item was created by
-
-EditItem_lblItemLastModifier = (new) This item was last modfied by
-
-EditItem_lblItemVersionID = (new) ID of the item: 
 
 EditItem_lblLicencingInfo = License
 
@@ -1017,8 +1017,6 @@ SearchResultList_lblItems = Items
 
 SearchResultList_lblNoHits = 0 Hits
 
-SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
-
 #
 # SearchResultList
 #
@@ -1033,6 +1031,8 @@ SearchResultList_lblSortedBy = sorted by
 Search_lblShowHide = show/hide
 
 ShowQuery = Show Query
+
+SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
 
 #
 # Submission
@@ -1071,45 +1071,6 @@ SubmitItem_lnkCancel = Cancel
 SubmitItem_lnkRelease = Finalize Release
 
 SubmitItem_lnkSubmit = Submit
-
-#
-# Tools
-#
-ToolsPage = (new) Tools
-
-Tools_lblCoNE = (new) CoNE
-
-Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
-
-Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
-
-Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
-
-Tools_lblREST = (new) REST
-
-Tools_lblRESTHead = (new) Search and Export (REST-Interface)
-
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
-
-Tools_lblSWORD = (new) SWORD
-
-Tools_lblSWORDHead = (new) SWORD-Interface
-
-Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
-
-Tools_lblTools = (new) Tools
-
-Tools_lblUnAPI = (new) unAPI
-
-Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
-
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
-
-Tools_lblValidationService = (new) Validation service
-
-Tools_lblValidationServiceHead = (new) Validation service
-
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
 
 ViewItemFull_btnFileSection = Files
 
@@ -1310,6 +1271,45 @@ ViewItemFull_lblSubHeaderDetails = Details
 ViewItemFull_lblSubHeaderEvent = Event
 
 ViewItemFull_lblSubHeaderFile = Files
+
+#
+# Tools
+#
+ToolsPage = (new) Tools
+
+Tools_lblTools = (new) Tools
+
+Tools_lblCoNE = (new) CoNE
+
+Tools_lblREST = (new) REST
+
+Tools_lblUnAPI = (new) unAPI
+
+Tools_lblValidationService = (new) Validation service
+
+Tools_lblSWORD = (new) SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+
+Tools_lblRESTHead = (new) Search and Export (REST-Interface)
+
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+
+Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
+
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+
+Tools_lblValidationServiceHead = (new) Validation service
+
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
+
+Tools_lblSWORDHead = (new) SWORD\u002DInterface
+
+Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
 
 #
 # ViewItem Full
@@ -1973,8 +1973,6 @@ adv_search_lblChkType_submitted = submitted
 #Date
 adv_search_lblFrom = From
 
-adv_search_lblInclHistory = Include history
-
 adv_search_lblLanguage = Language of Publication
 
 #language
@@ -2478,13 +2476,13 @@ mainMenu_lblBrowse = Browse
 
 mainMenu_lblCart = BASKET
 
+mainMenu_lblTools = Tools
+
 mainMenu_lblMyWorkspace = Deposit
 
 mainMenu_lblQA = Quality Assurance
 
 mainMenu_lblSubmission = SUBMISSION
-
-mainMenu_lblTools = Tools
 
 mainMenu_lnkBlog = Blog
 
