Former-commit-id: d4266764b2fec3711f6611fdbd632b9f2950880f

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -750,7 +750,7 @@ Login_changeLanguage = Sprache \u00E4ndern
 # Login
 Login_login_logout = Login/Logout
 
-MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
+MainMenu_ImportWorkspacesPage = Gehe zur Import Seite.
 
 MainMenu_WorkspacesPage = (new) Gehe zur \u00DCbersicht der Arbeitsbereiche
 
@@ -761,11 +761,11 @@ MainMenu_depWorkspace = Gehe zum Depositor Arbeitsplatz.
 # Main Menu
 MainMenu_myItems = Gehe zum Depositor Arbeitsplatz.
 
-NoSearchResultListPage = keine Suchergebnisse
+NoSearchResultListPage = Keine Suchergebnisse
 
 NoSearchResultsPage = Keine Treffer
 
-MainMenu_ToolsPage = (new) Gehe zur Tools\u002D\u00DCbersicht
+MainMenu_ToolsPage = (new) Gehe zur Werkzeug\u002D\u00DCbersicht
 
 #
 # Quality Assurance / Moderator Workspace
