--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -757,13 +757,13 @@ MainMenu_cartItemsPage = \u4E00\u6642\u4FDD\u5B58\u306E\u767B\u9332\u5185\u5BB9\
 MainMenu_depWorkspace = \u767B\u9332\u8005\u7528\u30EF\u30FC\u30AF\u30B9\u30DA\u30FC\u30B9\u306B\u884C\u304F
 
 # Main Menu
-MainMenu_myItems = Go to workspace.
+MainMenu_myItems = Go to Depositor Workspace.
 
 NoSearchResultListPage = No Search Results
 
-NoSearchResultsPage = No search results
+NoSearchResultsPage = No Search Results
 
-MainMenu_ToolsPage = (new) Go to Tools-Overview
+MainMenu_ToolsPage = (new) Go to Tools Overview
 
 #
 # Quality Assurance / Moderator Workspace
