--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -754,18 +754,18 @@ Login_login_logout = Login/Logout
 
 MainMenu_WorkspacesPage = (new) Go to Workspaces Overview
 
-MainMenu_cartItemsPage = Go to Basket page.
+MainMenu_cartItemsPage = Go to Basket
 
-MainMenu_depWorkspace = Go to Depositor Workspace.
+MainMenu_depWorkspace = Go to Depositor Workspace
 
 # Main Menu
 MainMenu_myItems = Go to workspace.
 
 NoSearchResultListPage = No Search Results
 
-NoSearchResultsPage = No search results
+NoSearchResultsPage = No Search Results
 
-MainMenu_ToolsPage = (new) Go to Tools-Overview
+MainMenu_ToolsPage = (new) Go to Tools Overview
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1905,7 +1905,7 @@ mainMenu_lnkHelp = Go to Help.
 #
 # Main menu
 #
-mainMenu_lnkHome = Go to PubMan startpage.
+mainMenu_lnkHome = Go to PubMan Startpage.
 
 mainMenu_lnkPolicy = Policy&Disclaimer.
 
@@ -1913,7 +1913,7 @@ mainMenu_lnkQA = QA
 
 mainMenu_lnkQAWorkspace = QA Workspace
 
-navigation_lblStartpage = Go to PubMan startpage.
+navigation_lblStartpage = Go to PubMan Startpage.
 
 no = No
 
