Former-commit-id: 6a091db28a812208ac56bd0a7dc3999cba72ea85

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -321,7 +321,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = Please choose a collection for your item.
 
-deleteItemsFromBasket_NoItemSelected = (new) Please select at least one Item to remove.
+deleteItemsFromBasket_NoItemSelected = (new) Please select at least one Item.
 
 #
 # Delete Message
@@ -672,9 +672,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information can be found here:
 
 #
 # Common
