--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -624,9 +624,9 @@ search_TechnicalError = Se ha producido un error t\u00E9cnico mientras se proces
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information can be found here:
 
 #
 # Common
