--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -668,9 +668,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = (new) Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = (new) Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information can be found here:
 
 #
 # Common
