--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -315,7 +315,7 @@ copyright = \u00A9 2007 Max Planck Gesellschaft
 #
 create_Item_Select_Collection = Bitte w\u00E4hlen Sie die Collection aus, in der Sie Ihren Datensatz erstellen m\u00F6chten.
 
-deleteItemsFromBasket_NoItemSelected = (new) Bitte w\u00E4hlen Sie mindestens einen Datensatz zum entfernen aus.
+deleteItemsFromBasket_NoItemSelected = (new) Bitte w\u00E4hlen Sie mindestens einen Datensatz aus.
 
 #
 # Delete Message
@@ -358,7 +358,7 @@ depositorWS_valNoItemsMsg = Sie haben keine Datens\u00E4tze im gew\u00E4hlten St
 
 depositorWS_wrongItemState = Ein oder mehrere Datens\u00E4tze m\u00FCssen zum Ausf\u00FChren der gew\u00E4hlen Aktion korrigiert werden.
 
-depositorWE_noOpenContextsAvailable = (new) Es ist kein ge\u00F6ffneter Context verf\u00FCgbar.
+depositorWE_noOpenContextsAvailable = (new) Es ist kein ge\u00F6ffneter Kontext verf\u00FCgbar.
 
 easy_submission_ExternalLocators = Zus\u00E4tzlich k\u00F6nnen Sie hier die URL zu extern abgelegtem Supplementary Material angeben.
 
@@ -663,7 +663,7 @@ search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetr
 #
 # Tools
 #
-toolsOverview = (new) Hier finden Sie eine \u00DCbersicht der zur Verf\u00FCgung stehenden Tools. 
+toolsOverview = (new) Hier finden Sie eine \u00DCbersicht über die verf\u00FCbaren Werkzeuge und Schnittstellen. 
 
 toolsMoreInformation =  (new) Weitere Informationen finden Sie unter:
 
