--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -699,7 +699,7 @@ EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Heftnummer
 
-EditItem_lblItemDepositor = (new) Dieser Datensatz wurde eingestellt von
+EditItem_lblItemDepositor = (new) Dieser Datensatz wurde erstellt von
 
 EditItem_lblItemLastModifier = (new) Dieser Datensatz wurde zuletzt ge\u00E4ndert von
 
@@ -1017,7 +1017,7 @@ SearchResultList_lblItems = Datens\u00E4tze
 
 SearchResultList_lblNoHits = 0 Treffer
 
-SearchResultList_lblRestServiceExamplePage = (new) in REST-Interface \u00FCbernehmen
+SearchResultList_lblRestServiceExamplePage = (new) In die REST-Schnittstelle \u00FCbernehmen
 
 #
 # SearchResultList
@@ -1075,7 +1075,7 @@ SubmitItem_lnkSubmit = Einstellen
 #
 # Tools
 #
-ToolsPage = (new) Tools
+ToolsPage = (new) Werkzeuge
 
 Tools_lblCoNE = (new) CoNE
 
@@ -1089,7 +1089,7 @@ Tools_lblREST = (new) REST
 
 Tools_lblRESTHead = (new) Suchen und Exportieren (REST-Schnittstelle)
 
-Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan-Daten in einem externen System integrieren? Die notwendigen Abfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
 
 Tools_lblSWORD = (new) SWORD
 
@@ -1097,19 +1097,19 @@ Tools_lblSWORDHead = (new) SWORD-Schnittstelle
 
 Tools_lblSWORDText = (new) Nutzen Sie diesen Push-Dienst zum automatisierten Datenimport von externen Servern. 
 
-Tools_lblTools = (new) Tools
+Tools_lblTools = (new) Werkzeuge
 
 Tools_lblUnAPI = (new) unAPI
 
 Tools_lblUnAPIHead = (new) Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
 
-Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
+Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle.
 
 Tools_lblValidationService = (new) Validierungsservice
 
 Tools_lblValidationServiceHead = (new) Validierungsservice
 
-Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
+Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit. 
 
 ViewItemFull_btnFileSection = Dateien
 
@@ -2482,7 +2482,7 @@ mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
 mainMenu_lblSubmission = EINGABE
 
-mainMenu_lblTools = (new) Tools
+mainMenu_lblTools = (new) Werkzeuge
 
 mainMenu_lnkBlog = Blog
 
