--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -699,11 +699,11 @@ EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Issue
 
-EditItem_lblItemDepositor = (new) This item was created by
+EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemLastModifier = (new) This item was last modfied by
+EditItem_lblItemLastModifier = (new) Last modified by
 
-EditItem_lblItemVersionID = (new) ID of the item: 
+EditItem_lblItemVersionID = (new) Item ID: 
 
 EditItem_lblLicencingInfo = License
 
@@ -1017,7 +1017,7 @@ SearchResultList_lblItems = Items
 
 SearchResultList_lblNoHits = 0 Hits
 
-SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
+SearchResultList_lblRestServiceExamplePage = (new) Insert query in REST-Interface
 
 #
 # SearchResultList
@@ -1089,7 +1089,7 @@ Tools_lblREST = (new) REST
 
 Tools_lblRESTHead = (new) Search and Export (REST-Interface)
 
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via REST-Interface.
 
 Tools_lblSWORD = (new) SWORD
 
@@ -1103,13 +1103,13 @@ Tools_lblUnAPI = (new) unAPI
 
 Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
 
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface. 
 
 Tools_lblValidationService = (new) Validation service
 
 Tools_lblValidationServiceHead = (new) Validation service
 
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness.
 
 ViewItemFull_btnFileSection = Files
 
