Former-commit-id: e31a8282a1019a696fbc18e1f8caa341a5212d24

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -643,7 +643,7 @@ EditItem_lblClassifiedSubject = Klassifizierte Schlagworte
 
 EditItem_lblCollection = Collection
 
-EditItem_lblCollectionOfItem = Dieser Datensatz ist Teil der
+EditItem_lblCollectionOfItem = Collection:
 
 EditItem_lblContent = Inhalt
 
@@ -699,9 +699,9 @@ EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Heftnummer
 
-EditItem_lblItemDepositor = (new) Dieser Datensatz wurde erstellt von
+EditItem_lblItemDepositor = (new) Erstellt von
 
-EditItem_lblItemLastModifier = (new) Dieser Datensatz wurde zuletzt ge\u00E4ndert von
+EditItem_lblItemLastModifier = (new) Zuletzt ge\u00E4ndert von
 
 EditItem_lblItemVersionID = (new) ID des Datensatzes: 
 
