--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -643,7 +643,7 @@ EditItem_lblClassifiedSubject = Classified Subject
 
 EditItem_lblCollection = Collection
 
-EditItem_lblCollectionOfItem = This item is part of the
+EditItem_lblCollectionOfItem = Collection:
 
 EditItem_lblContent = Content
 
