Former-commit-id: ef78c98738a999df8458643b491d96e24abe4217

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1155,7 +1155,7 @@ ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht,
 
 ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
 
-ViewItemFull_lblDateSubmitted = Eingestellt, 
+ViewItemFull_lblDateSubmitted = Eingereicht, 
 
 ViewItemFull_lblDates = Datum
 
@@ -1499,7 +1499,7 @@ ViewItemShort_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht
 
 ViewItemShort_lblDatePublishedOnline = Online ver\u00F6ffentlicht
 
-ViewItemShort_lblDateSubmitted = Eingestellt
+ViewItemShort_lblDateSubmitted = Eingereicht
 
 ViewItemShort_lblDates = Datum
 
@@ -1572,9 +1572,9 @@ ViewItem_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht
 
 ViewItem_lblDatePublishedOnline = Online ver\u00F6ffentlicht
 
-ViewItem_lblDateSubmitted = Eingestellt
+ViewItem_lblDateSubmitted = Eingereicht
 
-ViewItem_lblDateSubmitted1 = Einstellungsdatum:
+ViewItem_lblDateSubmitted1 = Eingereicht:
 
 ViewItem_lblDregreeType1 = Art des Abschlusses:
 
@@ -1969,7 +1969,7 @@ adv_search_lblChkType_publishedon = online publiziert
 
 adv_search_lblChkType_publishedpr = im Druck publiziert
 
-adv_search_lblChkType_submitted = eingestellt
+adv_search_lblChkType_submitted = eingereicht
 
 #Date
 adv_search_lblFrom = Von
@@ -2168,7 +2168,7 @@ easy_submission_lblDatePublishedInPrint = Erschienen im Druck
 
 easy_submission_lblDatePublishedOnline = Erschienen online
 
-easy_submission_lblDateSubmitted = Einstellungsdatum
+easy_submission_lblDateSubmitted = Eingereicht
 
 easy_submission_lblDateType = Datumstyp
 
