--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -680,11 +680,11 @@ EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
 
-EditItem_lblItemDepositor = (new) This item was created by
+EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemLastModifier = (new) This item was last modfied by
+EditItem_lblItemLastModifier = (new) Last modified by
 
-EditItem_lblItemVersionID = (new) ID of the item: 
+EditItem_lblItemVersionID = (new) Item ID: 
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
 
@@ -994,7 +994,7 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
+SearchResultList_lblRestServiceExamplePage = (new) Insert query in REST-Interface
 
 #
 # SearchResultList
@@ -1066,7 +1066,7 @@ Tools_lblREST = (new) REST
 
 Tools_lblRESTHead = (new) \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
-Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface.
 
 Tools_lblSWORD = (new) SWORD
 
@@ -1080,13 +1080,13 @@ Tools_lblUnAPI = (new) unAPI
 
 Tools_lblUnAPIHead = (new) \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
-Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface.
 
 Tools_lblValidationService = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
 Tools_lblValidationServiceHead = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness.
 
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
