--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2404,7 +2404,7 @@ item_date-issued = Erschienen im Druck
 
 item_date-modified = \u00C4nderungsdatum
 
-item_date-submitted = Einstellungsdatum
+item_date-submitted = Eingereicht
 
 item_degree = Abschluss
 
