AffiliationTree Icons fixed Labels added
Former-commit-id: 9fcafd23be017ee045fd8d89948569b59436bed7

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1974,9 +1974,13 @@ adv_search_lblChkType_submitted = eingereicht
 #Date
 adv_search_lblFrom = Von
 
-adv_search_lblInclHistory = Vorg\u00E4nger- und Nachfolger - Institutionen ber\u00FCcksichtigen
+adv_search_lblInclHistory = (neu) Vorg\u00E4nger- und Nachfolger - Institutionen ber\u00FCcksichtigen
 
 adv_search_lblLanguage = Sprache der Publikation
+
+#Event
+
+adv_search_lblEventInvited = (neu) Eingeladen
 
 #language
 adv_search_lblLanguageTerm = Sprache der Publikation
