--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1973,9 +1973,13 @@ adv_search_lblChkType_submitted = submitted
 #Date
 adv_search_lblFrom = From
 
-adv_search_lblInclHistory = Include history
+adv_search_lblInclHistory = (neu) Include history
 
 adv_search_lblLanguage = Language of Publication
+
+#Event
+
+adv_search_lblEventInvited = (neu) Invited
 
 #language
 adv_search_lblLanguageTerm = Language of Publication
