--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1916,6 +1916,10 @@ adv_search_lblFrom = De
 
 adv_search_lblLanguage = Lengua de Publicaci\u00F3n
 
+#Event
+
+adv_search_lblEventInvited = (neu) Invited
+
 #language
 adv_search_lblLanguageTerm = Lengua de Publicaci\u00F3n
 
