--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1949,6 +1949,10 @@ adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
 
 adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 
+#Event
+
+adv_search_lblEventInvited = (neu) Invited
+
 #language
 adv_search_lblLanguageTerm = \u8A00\u8A9E
 
