implemented [PUBMAN-2235] Browse through the detailed views of lists (search results)
Item information in the ViewItemFull moved to the top and added some information


Former-commit-id: 303f66c41344aba123c7e35aa60ec9e0b7b5e4de

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -970,6 +970,10 @@ Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management
 
+List_lastItem = (neu) vorherige Publikation
+
+List_nextItem = (neu) n\u00E4chste Publikation
+
 #
 # Quality Assurance / Moderator Workspace
 #
