--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -970,6 +970,10 @@ Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
+List_lastItem = (neu) Previous publication
+
+List_nextItem = (neu) Next publication
+
 #
 # Quality Assurance / Moderator Workspace
 #
