--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -950,6 +950,10 @@ Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan - eSciDoc\u6587\u732E\u7BA1\u7406\u30BD\u30EA\u30E5\u30FC\u30B7\u30E7\u30F3
 
+List_lastItem = (neu) Previous publication
+
+List_nextItem = (neu) Next publication
+
 #
 # Quality Assurance / Moderator Workspace
 #
