Former-commit-id: 31b99cb6a0ae90e54028320a11660e086bef082f

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -663,7 +663,7 @@ search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetr
 #
 # Tools
 #
-toolsOverview = (new) Hier finden Sie eine \u00DCbersicht über die verf\u00FCbaren Werkzeuge und Schnittstellen. 
+toolsOverview = (new) Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
 
 toolsMoreInformation =  (new) Weitere Informationen finden Sie unter:
 
