--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1978,7 +1978,7 @@ adv_search_lblChkType_submitted = eingereicht
 #Date
 adv_search_lblFrom = Von
 
-adv_search_lblInclHistory = (neu) Vorg\u00E4nger- und Nachfolger - Institutionen ber\u00FCcksichtigen
+adv_search_lblInclHistory = (neu) Vorg\u00E4nger- und Nachfolge-Institutionen ber\u00FCcksichtigen
 
 adv_search_lblLanguage = Sprache der Publikation
 
