BugFix for ViewItemFull changed Messages for latest message
Former-commit-id: 0bc4b63005b30e6ae1a8f7b94ad7f37093ac641c

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -244,6 +244,8 @@ UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
 
 UploadFileNotProvided = Bitte w\u00E4hlen Sie eine Datei aus
 
+ViewItemFull_latestMessage = Letzte Nachricht:
+
 ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nachricht:
 
 ViewItemFull_invalidID = Das Item mit dem Identifikator $1 konnte nicht gefunden werden.
