--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -250,6 +250,8 @@ UnknownLanguageCode = The given language code does not exist in ISO639-3
 
 UploadFileNotProvided = Please select a file
 
+ViewItemFull_latestMessage = (new) Latest Message:
+
 ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = The item with the identifier $1 could not be found.
