--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -212,6 +212,8 @@ TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UploadFileNotProvided = NEW: Please select a file
 
+ViewItemFull_latestMessage = (new) Latest Message:
+
 ViewItemFull_inRevision = \u00A1Este item est\u00E1 siendo revisado! \u00DAltimo mensaje:
 
 ViewItemFull_invalidID = No se ha podido encontrar el item con el identificador $1.
