--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -244,6 +244,8 @@ UnknownLanguageCode = The given language code does not exist in ISO639-3
 
 UploadFileNotProvided = NEW: Please select a file
 
+ViewItemFull_latestMessage = (new) Latest Message:
+
 ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
