cosmetic GUI changes
Former-commit-id: 7dbd2fd0ed00a523cc1e7a0ba3074fa34d755ab1

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -701,7 +701,11 @@ EditItem_lblIssue = Heftnummer
 
 EditItem_lblItemDepositor = (new) Erstellt von
 
-EditItem_lblItemLastModifier = (new) Zuletzt ge\u00E4ndert von
+EditItem_lblItemlatestChange = (new) Erstellt am
+
+EditItem_lblItemLatestModifier = (new) Zuletzt ge\u00E4ndert von
+
+EditItem_lblItemLatestModification = (new) Zuletzt ge\u00E4ndert am
 
 EditItem_lblItemVersionID = (new) ID des Datensatzes: 
 
