--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -692,7 +692,11 @@ EditItem_lblIssue = N\u00FAmero
 
 EditItem_lblItemDepositor = (new) Created by
 
+EditItem_lblItemlatestChange = (new) Created on
+
 EditItem_lblItemLastModifier = (new) Last modified by
+
+EditItem_lblItemLatestModification = (new) Last modification date
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
