--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -682,7 +682,11 @@ EditItem_lblIssue = \u53F7
 
 EditItem_lblItemDepositor = (new) Created by
 
+EditItem_lblItemlatestChange = (new) Created on
+
 EditItem_lblItemLastModifier = (new) Last modified by
+
+EditItem_lblItemLatestModification = (new) Last modification date
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
