--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -701,7 +701,11 @@ EditItem_lblIssue = Issue
 
 EditItem_lblItemDepositor = (new) Created by
 
+EditItem_lblItemlatestChange = (new) Created on
+
 EditItem_lblItemLastModifier = (new) Last modified by
+
+EditItem_lblItemLatestModification = (new) Last modification date
 
 EditItem_lblItemVersionID = (new) Item ID: 
 
