Former-commit-id: 8c58f095423db8b66b1015dd7f2021270f306e05

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -302,7 +302,7 @@ ENUM_DEGREETYPE_MAGISTER = Magister
 
 ENUM_DEGREETYPE_MASTER = Master
 
-ENUM_DEGREETYPE_PHD = PHD
+ENUM_DEGREETYPE_PHD = PhD
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
