Former-commit-id: 528a73311e53548402a5a788fc9417c264accf3b

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -775,7 +775,7 @@ EditItem_lnkSaveURL = URL Speichern
 
 EditItem_lnkValidate = Validierung
 
-EditItem_localPath = Lokaler Datei Pfad
+EditItem_localPath = Lokaler Datei-Pfad
 
 ErrorPage = Fehler
 
