Former-commit-id: d34feda7963665a1dcd5276f1a140c91cd8aea8c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1153,7 +1153,7 @@ ViewItemFull_lblCreators = Urheber
 
 ViewItemFull_lblDDCSubject = DDC
 
-ViewItemFull_lblDateAccepted = Akzeptiert, 
+ViewItemFull_lblDateAccepted = Angenommen, 
 
 ViewItemFull_lblDateCreated = Erstellt, 
 
@@ -1497,7 +1497,7 @@ ViewItemRevisions_lblReleaseDate = Freigegeben:
 #
 ViewItemShort_lblCreators = Urheber
 
-ViewItemShort_lblDateAccepted = Akzeptiert
+ViewItemShort_lblDateAccepted = Angenommen
 
 ViewItemShort_lblDateCreated = Erstellt
 
@@ -1562,7 +1562,7 @@ ViewItem_lblCopyrightInfo = Copyright Info
 
 ViewItem_lblCreator1 = Urheber:
 
-ViewItem_lblDateAccepted = Akzeptiert
+ViewItem_lblDateAccepted = Angenommen
 
 ViewItem_lblDateAccepted1 = Annahmedatum:
 
@@ -1963,7 +1963,7 @@ adv_search_lblChkType_abb_event_start_date = Veranstalt.beginn
 
 adv_search_lblChkType_abb_publishedpr = im Druck publ.
 
-adv_search_lblChkType_accepted = akzeptiert
+adv_search_lblChkType_accepted = angenommen
 
 adv_search_lblChkType_created = erstellt
 
