Changed label for file upload
Former-commit-id: 0f3fe3e0fbefad08ddf1e87a22b1187a4f2f913c

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -601,7 +601,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = hinzuf\u00FCgen
 
-EditItem_btAddFile = Datei hinzuf\u00FCgen
+EditItem_btAddFile = (NEW) Lokale Datei(en) hochladen
 
 EditItem_btAddTitle = Alternativen Titel hinzuf\u00FCgen
 
@@ -701,13 +701,13 @@ EditItem_lblIssue = Heftnummer
 
 EditItem_lblItemDepositor = (new) Erstellt von
 
-EditItem_lblItemlatestChange = (new) Erstellt am
+EditItem_lblItemLatestModification = (new) Zuletzt ge\u00E4ndert am
 
 EditItem_lblItemLatestModifier = (new) Zuletzt ge\u00E4ndert von
 
-EditItem_lblItemLatestModification = (new) Zuletzt ge\u00E4ndert am
-
 EditItem_lblItemVersionID = (new) ID des Datensatzes: 
+
+EditItem_lblItemlatestChange = (new) Erstellt am
 
 EditItem_lblLicencingInfo = Lizenz
 
@@ -910,6 +910,8 @@ List_SelectItem = Selektieren
 
 List_ShortView = Alle zuklappen
 
+List_lastItem = (neu) vorherige Publikation
+
 List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
 
 List_lblBibList = Bibliographisch
@@ -956,6 +958,8 @@ List_lkShow = Anschauen
 
 List_lkToggleAll = Auswahl umkehren\u0009
 
+List_nextItem = (neu) n\u00E4chste Publikation
+
 LocalTagsPage = Lokale Tags bearbeiten
 
 LoginErrorPage = Login Status
@@ -973,10 +977,6 @@ NoSearchResultsPage = Keine Treffer
 Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management
-
-List_lastItem = (neu) vorherige Publikation
-
-List_nextItem = (neu) n\u00E4chste Publikation
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1979,16 +1979,15 @@ adv_search_lblChkType_publishedpr = im Druck publiziert
 
 adv_search_lblChkType_submitted = eingereicht
 
+#Event
+adv_search_lblEventInvited = (neu) Eingeladen
+
 #Date
 adv_search_lblFrom = Von
 
 adv_search_lblInclHistory = (neu) Vorg\u00E4nger- und Nachfolge-Institutionen ber\u00FCcksichtigen
 
 adv_search_lblLanguage = Sprache der Publikation
-
-#Event
-
-adv_search_lblEventInvited = (neu) Eingeladen
 
 #language
 adv_search_lblLanguageTerm = Sprache der Publikation
