--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -601,7 +601,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = add
 
-EditItem_btAddFile = Add New File
+EditItem_btAddFile = (NEW) Add New Local File(s)
 
 EditItem_btAddTitle = Add Alternative Title
 
@@ -701,13 +701,13 @@ EditItem_lblIssue = Issue
 
 EditItem_lblItemDepositor = (new) Created by
 
-EditItem_lblItemlatestChange = (new) Created on
-
 EditItem_lblItemLastModifier = (new) Last modified by
 
 EditItem_lblItemLatestModification = (new) Last modification date
 
 EditItem_lblItemVersionID = (new) Item ID: 
+
+EditItem_lblItemlatestChange = (new) Created on
 
 EditItem_lblLicencingInfo = License
 
@@ -910,6 +910,8 @@ List_SelectItem = Select Item
 
 List_ShortView = Collapse all
 
+List_lastItem = (neu) Previous publication
+
 List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
@@ -956,6 +958,8 @@ List_lkShow = Show
 
 List_lkToggleAll = Toggle all
 
+List_nextItem = (neu) Next publication
+
 LocalTagsPage = Edit Local Tags
 
 LoginErrorPage = Login state
@@ -973,10 +977,6 @@ NoSearchResultsPage = No search results
 Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
-
-List_lastItem = (neu) Previous publication
-
-List_nextItem = (neu) Next publication
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1978,16 +1978,15 @@ adv_search_lblChkType_publishedpr = published in print
 
 adv_search_lblChkType_submitted = submitted
 
+#Event
+adv_search_lblEventInvited = (neu) Invited
+
 #Date
 adv_search_lblFrom = From
 
 adv_search_lblInclHistory = (neu) Include history
 
 adv_search_lblLanguage = Language of Publication
-
-#Event
-
-adv_search_lblEventInvited = (neu) Invited
 
 #language
 adv_search_lblLanguageTerm = Language of Publication
